apps/overlays/k3d-dev/whoami/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-local-ingress
  namespace: webserver
spec:
  rules:
  - host: whoami.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: whoami-svc
            port:
              number: 80
