apps/overlays/k3d-dev/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    cert-manager.io/cluster-issuer: pebble-issuer
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - whoami.127.0.0.1.nip.io
    secretName: whoami.127.0.0.1.nip.io
  rules:
  - host: whoami.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-svc
            port:
              number: 80
